--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ django-debug-toolbar = "*"
 mysqlclient = "*"
 segno = "*"
 drf-nested-routers = "*"
+django-filter = "*"
+djoser = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
